Fix nav alignment. Add media queries.

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -45,7 +45,6 @@ a:active {
 	width: 320px;
 	font-family: 'Droid Sans Mono';
 	color: #FFFFFF;
-	/*background-color: #000000;*/
 }
 
 .title, h1, h2, h3, h4, h4 > a {
@@ -94,4 +93,10 @@ a.connect {
 	display: block;
 	margin: 1em auto;
 	width: 35%;
+}
+
+@media only screen and (min-width: 992px) {
+	#slide {
+		width: 620px;
+	}
 }
